--- a/_layouts/core.html
+++ b/_layouts/core.html
@@ -11,7 +11,7 @@
 	<head>
 		<meta charset="utf-8">
 		{% include license.html %}
-		<title>{{ page-title }} | {{ site.title[ page.language ] }}</title>
+		<title{% if page.error-code %} data-gc-analytics-error="{{ page.error-code }}"{% endif %}>{{ page-title }} | {{ site.title[ page.language ] }}</title>
 		<meta content="width=device-width, initial-scale=1" name="viewport">
 		{% include metadata.html %}
 		{% include resources-inc/head.html %}
